# DiscordLevelingCard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  test_check.py  testing.py
DiscordLevelingCard/: __init__.py  card_settings.py  discord_card.py  error.py  sandbox.py  tester.py
Examples/: tester_example.py
docs/: conf.py  index.rst  reference_index.rst
docs/source/: DiscordLevelingCard.rst  modules.rst
src/DiscordLevelingCard/: __init__.py  discord_card.py
src/DiscordLevelingCard/core/: image_handler.py
