[tool.poetry]
name = "discordlevelingcard"
version = "0.1.0"
description = "A library with leveling cards for your discord bot."
authors = ["Reset <resetwastakenwastaken@gmail.com>"]
license = "MIT"
packages = [
    { include = "DiscordLevelingCard"},
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiohttp = "^3.8.1"
requests = "^2.28.1"
disnake = "^2.5.2"
nextcord = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
