[tool.poetry]
name = "discordlevelingcard"
version = "0.1.8"
readme = "README.md"
description = "A library with leveling cards for your discord bot."
authors = ["Reset <resetwastakenwastaken@gmail.com>"]
license = "MIT"
packages = [
    { include = "DiscordLevelingCard"},
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
aiohttp = "^3.8.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
